5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1850_2601.log
== SUBMITION (2019-06-19 12:37:15) 
-- CODE:

from numpy import *
from numpy.linalg import *

frutas = array([[ ,  , ], [ ,  ,  ], [ ,  ,  ]])


compras = array([23.6, 52.6, 27.7])
compras = compras.T


preco = dot( , )


print("abacate: ", round(preco[0], 1))
print("banana: ", round(preco[1], 1))
print("caqui: ", round(preco[2], 1))

if preco[0] == max(preco):
    print("abacate")
elif preco[0] == max(preco):
    print("banana")
else:
    print("caqui")

-- EXECUTION TIME:
0.734252
-- ERROR:
  File "/home/codebench/codes/1850/2601/main.py", line 5
    frutas = array([[ ,  , ], [ ,  ,  ], [ ,  ,  ]])
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 22:31:02) 
-- CODE:
print("abacate: 1.2")
print("banana: 3.4")
print("caqui: 2.3")
print("banana")

-- OUTPUT:
abacate: 1.2
banana: 3.4
caqui: 2.3
banana
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-20 22:31:08) 
-- CODE:
print("abacate: 1.2")
print("banana: 3.4")
print("caqui: 2.3")
print("banana0")

-- EXECUTION TIME:
0.830212
-- TEST CASE 1:
---- input:
nada
---- correct output:
abacate:  2.9
banana:  0.5
caqui:  8.9
caqui

---- user output:
abacate: 1.2
banana: 3.4
caqui: 2.3
banana0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 22:46:11) 
-- CODE:
from numpy import *
from numpy.linalg import *
frutas = array([[3,12,1],[12,0,2],[0,2,3]])
compras = array([23.6, 52.6, 27.7])
compras = compras.T
print(compras)
preco = dot( , )
print("abacate: ", round(preco[0], 1))
print("banana: ", round(preco[1], 1))
print("caqui: ", round(preco[2], 1))
if preco[0] == max(preco):
    print("abacate")
elif preco[0] == max(preco):
    print("banana")
else:
    print("caqui")

-- ERROR:
File "XXXX", line 7
    preco = dot( , )
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 22:46:21) 
-- CODE:
from numpy import *
from numpy.linalg import *
frutas = array([[3,12,1],[12,0,2],[0,2,3]])
compras = array([23.6, 52.6, 27.7])
compras = compras.T
print(compras)

print("abacate: ", round(preco[0], 1))
print("banana: ", round(preco[1], 1))
print("caqui: ", round(preco[2], 1))
if preco[0] == max(preco):
    print("abacate")
elif preco[0] == max(preco):
    print("banana")
else:
    print("caqui")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 22:46:42) 
-- CODE:
from numpy import *
from numpy.linalg import *
frutas = array([[3,12,1],[12,0,2],[0,2,3]])
compras = array([23.6, 52.6, 27.7])
compras = compras.T
print(compras)
preco = 2
print("abacate: ", round(preco[0], 1))
print("banana: ", round(preco[1], 1))
print("caqui: ", round(preco[2], 1))
if preco[0] == max(preco):
    print("abacate")
elif preco[0] == max(preco):
    print("banana")
else:
    print("caqui")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 22:46:53) 
-- CODE:
from numpy import *
from numpy.linalg import *
frutas = array([[3,12,1],[12,0,2],[0,2,3]])
compras = array([23.6, 52.6, 27.7])
compras = compras.T
print(compras)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 22:47:46) 
-- CODE:
from numpy import *
from numpy.linalg import *
frutas = array([[3,12,1],[12,0,2],[0,2,3]])
compras = array([23.6, 52.6, 27.7])
print(compras)
compras = compras.T
print(compras)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 22:48:22) 
-- CODE:
from numpy import *
from numpy.linalg import *
x=array([[3,12,1],[12,0,2],[0,2,3]])
y=array([23.6, 52.6, 27.7])
y= y.T
print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 22:49:16) 
-- CODE:
from numpy import *
from numpy.linalg import *
x=array([[3,12,1],[12,0,2],[0,2,3]])
y=array([23.6, 52.6, 27.7])
y= y.T
z=solve(x,y)
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 22:50:07) 
-- CODE:
from numpy import *
from numpy.linalg import *
x=array([[3,12,1],[12,0,2],[0,2,3]])
y=array([23.6, 52.6, 27.7])
y= y.T
z=solve(x,y)
print(z[0])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 22:52:32) 
-- CODE:
from numpy import *
from numpy.linalg import *
x=array([[3,12,1],[12,0,2],[0,2,3]])
y=array([23.6, 52.6, 27.7])
y= y.T
z=solve(x,y)
print("abacate: ",z[0])
print("banana: ",z[1])
print("caqui: ",z[2])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 22:54:30) 
-- CODE:
from numpy import *
from numpy.linalg import *
x=array([[3,12,1],[12,0,2],[0,2,3]])
y=array([23.6, 52.6, 27.7])
y= y.T
z=solve(x,y)
print("abacate: ",(round(z[0],1))
print("banana: ",(round(z[1],1))
print("caqui: ",(round(z[2],1))

-- ERROR:
File "XXXX", line 8
    print("banana: ",(round(z[1],1))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 22:55:30) 
-- CODE:
from numpy import *
from numpy.linalg import *
x=array([[3,12,1],[12,0,2],[0,2,3]])
y=array([23.6, 52.6, 27.7])
y= y.T
z=solve(x,y)
print("abacate: ",(round(z[0],1)))
print("banana: ",(round(z[1],1)))
print("caqui: ",(round(z[2],1)))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-20 22:55:36) 
-- CODE:
from numpy import *
from numpy.linalg import *
x=array([[3,12,1],[12,0,2],[0,2,3]])
y=array([23.6, 52.6, 27.7])
y= y.T
z=solve(x,y)
print("abacate: ",(round(z[0],1)))
print("banana: ",(round(z[1],1)))
print("caqui: ",(round(z[2],1)))

-- EXECUTION TIME:
0.993939
-- TEST CASE 1:
---- input:
nada
---- correct output:
abacate:  2.9
banana:  0.5
caqui:  8.9
caqui

---- user output:
abacate:  2.9
banana:  0.5
caqui:  8.9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 22:55:39) 
-- CODE:
from numpy import *
from numpy.linalg import *
x=array([[3,12,1],[12,0,2],[0,2,3]])
y=array([23.6, 52.6, 27.7])
y= y.T
z=solve(x,y)
print("abacate: ",(round(z[0],1)))
print("banana: ",(round(z[1],1)))
print("caqui: ",(round(z[2],1)))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-20 22:57:04) 
-- CODE:
from numpy import *
from numpy.linalg import *
x=array([[3,12,1],[12,0,2],[0,2,3]])
y=array([23.6, 52.6, 27.7])
y= y.T
z=solve(x,y)
print("abacate: ",(round(z[0],1)))
print("banana: ",(round(z[1],1)))
print("caqui: ",(round(z[2],1)))
if(z[0]>z[1] and z[0]>z[2]):
	print("abacate")
elif(z[1]>z[0] and z[1]>z[2]):
	print("banana")
else:
	print("caqui")

-- EXECUTION TIME:
1.11414
-- TEST CASE 1:
---- input:
nada
---- correct output:
abacate:  2.9
banana:  0.5
caqui:  8.9
caqui

---- user output:
abacate:  2.9
banana:  0.5
caqui:  8.9
caqui
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
